--- a/Page4.html
+++ b/Page4.html
@@ -23,7 +23,7 @@
     <P>Lochquarry is an Outdoor Centre, which offers outdoor Land based, water based and Rope based activities </P>
 
 
-<img src="Images/Water Activities/Powerboating.jpg" alt="boating">
+<img src="Images/WaterActivities/Powerboating.jpg" alt="boating">
 
 
     <!-- Second header: Subsection title -->
@@ -152,4 +152,5 @@
   
 
 </body>
+
 </html>
