--- a/page3.html
+++ b/page3.html
@@ -20,8 +20,8 @@
     <h1>Land page</h1>
     
     <P>Lochquarry is an Outdoor Centre, which offers outdoor Land based, water based and Rope based activities </P>
-    <img src="Images/Lochquarry Outdoor Centre.png" alt = "banner">
-<img src="Images/Land Activities/Hillwalking.jpg" alt="wallking">
+    <img src="Images/LochquarryOutdoorCentre.png" alt = "banner">
+<img src="Images/LandActivities/Hillwalking.jpg" alt="wallking">
 <img src="Images/Nature/Nature.jpg" alt="img">
 
 
@@ -61,4 +61,5 @@
     
     ‘I would definitely come back’ − Kelly, aged 9  </p>
 </body>
+
 </html>
