--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
 
     <!-- This is a Hyperlink, it will display the message Glasgow Clyde College and link to the website reffrenced in <a href = " this website"> -->
     <a href="https://www.glasgowclyde.ac.uk">Glasgow Clyde College</a>
+    <p id="dt"></p>
+    <script>
+alert("Welcome to lochquarry website")
+document.getElementById("dt").innerHTML = new Date ();
+
+
+    </script>
 
 </body>
+
 </html>
